refactor simplify